Add Google Play credentials management and subscription tier updates
- Updated .gitignore to exclude sensitive Google Play credentials files.
- Enhanced docker-compose.yml to optionally mount Google Play credentials file in the container.
- Modified env.template to support both service account key and file-based authentication for Google Play API.
- Refactored SubscriptionDataInitializer to create and manage multiple subscription tiers for kids, replacing the legacy plus_monthly plan.
- Updated unit tests to validate the creation and management of new subscription tiers, ensuring proper functionality and coverage.